--- a/css/showhide.css
+++ b/css/showhide.css
@@ -1,4 +1,4 @@
-.show{
+/* .show{
     display: block;
 }
 
@@ -25,10 +25,13 @@
     transition: 0.5s all;
     display: flex;
     
+    
 }
 
 .offer__slider-wrapper{
     overflow: hidden;
+    
+    
 }
 
 .carousel-indicators {
@@ -59,3 +62,7 @@
        opacity: .5;
     transition: opacity .6s ease;
 }
+
+.offer__slider{
+    position: relative;
+} */
